--- a/pppppp/DashBoardFriendDataCell.xib
+++ b/pppppp/DashBoardFriendDataCell.xib
@@ -45,6 +45,11 @@
                     </label>
                 </subviews>
                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <connections>
+                    <outlet property="dataLabel" destination="bdd-P8-OhF" id="jcq-9L-ba0"/>
+                    <outlet property="nameLabel" destination="voH-JH-1AQ" id="CNw-ry-M7s"/>
+                    <outlet property="ptLabel" destination="fnf-vb-KOp" id="Y0n-r2-Mir"/>
+                </connections>
             </collectionViewCellContentView>
             <size key="customSize" width="349" height="130"/>
             <connections>
