--- a/pppppp/FriendDataCell.xib
+++ b/pppppp/FriendDataCell.xib
@@ -11,10 +11,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="frienddatacell" id="gTV-IL-0wX" customClass="FriendDataCell" customModule="pppppp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="500" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="464" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="500" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="464" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9I-B8-fFX">
@@ -23,8 +23,8 @@
                             <constraint firstAttribute="width" constant="140" id="LuA-Jx-xit"/>
                             <constraint firstAttribute="height" constant="21" id="yB5-Ha-mbf"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -34,7 +34,7 @@
                 <constraint firstItem="t9I-B8-fFX" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Hc8-81-AZY"/>
                 <constraint firstItem="t9I-B8-fFX" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="UEw-Zf-8yK"/>
             </constraints>
-            <size key="customSize" width="500" height="50"/>
+            <size key="customSize" width="464" height="50"/>
             <connections>
                 <outlet property="nameLabel" destination="t9I-B8-fFX" id="2cU-rn-F1E"/>
             </connections>
